tests/fixtures/invalid/bool_in_bool.py
# Cannot use 'in' with Bool and Bool
x: bool = True in True
